--- a/nginx_proxy_01.conf
+++ b/nginx_proxy_01.conf
@@ -1,6 +1,6 @@
 ## This is a sample proxy configuration of nginx as frontend. It will proxy to 127.0.0.1:8080, which is an apache server configured to listen on port 8080 only form localhost.
 
-
+# nginz COnfiguration | Sites-available
 server {
         listen   80; 
 
@@ -26,4 +26,26 @@ server {
                 deny all;
         }
 }
+
+
+#apache configuration | Sites-available
+<VirtualHost 127.0.0.1:8080>
+	#ServerName www.example.com
+        ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
+
+
+#ports conf 
+Listen 127.0.0.1:8080
+
+<IfModule ssl_module>
+	Listen 443
+</IfModule>
+
+<IfModule mod_gnutls.c>
+	Listen 443
+</IfModule>
 
