--- a/nginx_proxy_01.conf
+++ b/nginx_proxy_01.conf
@@ -1,6 +1,6 @@
 ## This is a sample proxy configuration of nginx as frontend. It will proxy to 127.0.0.1:8080, which is an apache server configured to listen on port 8080 only form localhost.
 
-# nginz COnfiguration | Sites-available
+# nginx COnfiguration | Sites-available
 server {
         listen   80; 
 
